@@ -4,6 +4,8 @@ Emulation fixes:
  - GBA Memory: Fix loading Thumb savestates when in ARM mode
 Other fixes:
  - GBA: Fix FireRed revision misdetecting as a ROM hack
+Misc:
+ - Qt: Add ROM filename and size to bug reporter
 
 0.9.0: (2021-03-28)
 Features:
